<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.Easypdfreader.Toolbar"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/white"
        app:title="@string/settings_title"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                style="@style/SettingsSectionHeader"
                android:text="@string/settings_general" />

            <LinearLayout
                android:id="@+id/item_change_language"
                style="@style/SettingsItemRow">
                <ImageView
                    style="@style/SettingsItemIcon"
                    android:src="@drawable/ic_language"
                    android:contentDescription="@string/settings_change_language" />
                <TextView
                    style="@style/SettingsItemText"
                    android:text="@string/settings_change_language" />
            </LinearLayout>

            <include layout="@layout/settings_divider" />

            <TextView
                style="@style/SettingsSectionHeader"
                android:text="@string/settings_app" />

            <LinearLayout
                android:id="@+id/item_share_app"
                style="@style/SettingsItemRow">
                <ImageView
                    style="@style/SettingsItemIcon"
                    android:src="@drawable/ic_share_settings"
                    android:contentDescription="@string/settings_share_app" />
                <TextView
                    style="@style/SettingsItemText"
                    android:text="@string/settings_share_app" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_rate_app"
                style="@style/SettingsItemRow">
                <ImageView
                    style="@style/SettingsItemIcon"
                    android:src="@drawable/ic_star"
                    android:contentDescription="@string/settings_rate_app" />
                <TextView
                    style="@style/SettingsItemText"
                    android:text="@string/settings_rate_app" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_customer_support"
                style="@style/SettingsItemRow">
                <ImageView
                    style="@style/SettingsItemIcon"
                    android:src="@drawable/ic_support_agent"
                    android:contentDescription="@string/settings_customer_support" />
                <TextView
                    style="@style/SettingsItemText"
                    android:text="@string/settings_customer_support" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_about"
                style="@style/SettingsItemRow">
                <ImageView
                    style="@style/SettingsItemIcon"
                    android:src="@drawable/ic_info"
                    android:contentDescription="@string/settings_about" />
                <TextView
                    style="@style/SettingsItemText"
                    android:text="@string/settings_about" />
            </LinearLayout>

            <include layout="@layout/settings_divider" />

            <TextView
                style="@style/SettingsSectionHeader"
                android:text="@string/settings_community_support" />

            <LinearLayout
                android:id="@+id/item_buy_coffee"
                style="@style/SettingsItemRow">
                <ImageView
                    style="@style/SettingsItemIcon"
                    android:src="@drawable/ic_coffee"
                    android:contentDescription="@string/settings_buy_coffee" />
                <TextView
                    style="@style/SettingsItemText"
                    android:text="@string/settings_buy_coffee" />
            </LinearLayout>

            <include layout="@layout/settings_divider" />

            <TextView
                style="@style/SettingsSectionHeader"
                android:text="@string/settings_legal" />

            <LinearLayout
                android:id="@+id/item_privacy"
                style="@style/SettingsItemRow">
                <ImageView
                    style="@style/SettingsItemIcon"
                    android:src="@drawable/ic_privacy_tip"
                    android:contentDescription="@string/settings_privacy" />
                <TextView
                    style="@style/SettingsItemText"
                    android:text="@string/settings_privacy" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_terms"
                style="@style/SettingsItemRow">
                <ImageView
                    style="@style/SettingsItemIcon"
                    android:src="@drawable/ic_description"
                    android:contentDescription="@string/settings_terms" />
                <TextView
                    style="@style/SettingsItemText"
                    android:text="@string/settings_terms" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
